--- a/index.html
+++ b/index.html
@@ -14,3 +14,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap" rel="stylesheet">
